--- a/Js/Aula_Alex/exer.2.html
+++ b/Js/Aula_Alex/exer.2.html
@@ -6,8 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="desafio.js">
-        
-    </script>
+    <script src="exer_2.js"></script>
 </body>
 </html>
